tests/ui/rename/test_rename_garbage.stderr
error: unknown field `garbage`
 --> $DIR/test_rename_garbage.rs:5:24
  |
5 |     #[shorthand(rename(garbage = ""))]
  |                        ^^^^^^^
